# symgrep

./: AGENTS.md  Cargo.toml  README.md
docs/: ADDING_LANGUAGES.md  AGENT_GUIDE.md  DAEMON_API.md  IMPLEMENTATION_PLAN.md  JSON_SCHEMA.md  PHASES_01-03.md  PHASES_04-06.md  PHASES_07-08.md  SYMBOL_ATTRIBUTES.md  TESTING.md  config.example.toml
src/: lib.rs  main.rs
src/cli/: args.rs  config.rs  follow.rs  format.rs  http_backend.rs  mod.rs
src/index/: backend.rs  file.rs  mod.rs  models.rs  sqlite.rs
src/language/: cpp.rs  javascript.rs  mod.rs  rust.rs  typescript.rs
src/models/: mod.rs
src/search/: engine.rs  mod.rs  query.rs
src/server/: mod.rs
tests/: cli_config.rs  cli_follow.rs  cli_index.rs  cli_search.rs  cli_server.rs
tests/fixtures/call_graph_repo/: cpp_calls.cpp  js_calls.js  ts_calls.ts
tests/fixtures/cpp_repo/: doc_comments.cpp  sample.cpp
tests/fixtures/mixed_repo/: sample.cpp
tests/fixtures/rust_repo/: lib.rs
tests/fixtures/symbol_literal_repo/: sample.cpp  simple.js  simple.ts
tests/fixtures/text_literal_repo/: literal.txt
tests/fixtures/text_repo/: b.txt  nomatch.txt
tests/fixtures/ts_js_repo/: component.jsx  component.tsx  doc_comments.js  doc_comments.ts  multiline.js  multiline.ts
tests/snapshots/: README.md  agent_cpp_increment_parent.json  agent_symbol_add_mixed_decl.json  agent_text_limit_max_lines.json  agent_ts_add_decl_with_index.json  text_search_foo.json  text_search_foo.txt  text_search_foo_context_1.txt  text_search_foo_table.txt
wrappers/python/: symgrep_agent.py  test_symgrep_agent.py
