[package]
name = "symgrep"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
serde_json = "1"
toml = "0.8"
tree-sitter = "0.25.10"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-cpp = "0.23.2"
rusqlite = { version = "0.32", features = ["bundled"] }
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
time = { version = "0.3", default-features = false, features = ["std", "formatting"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
